test/bad/functions/call4.px

func f(Int x) Int def
    return 0

f()
